--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
+    "prom-client": "^15.1.3",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
